LPS-136157 Fix dropdown menu overlap

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_actionable.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_actionable.scss
@@ -14,7 +14,7 @@
 	top: -30px;
 	white-space: nowrap;
 	width: auto;
-	z-index: 50;
+	z-index: 40;
 
 	&.ddm-fieldset {
 		background-color: #5aca75;
